fix properites